cairo: fix reference leak

cairo_surface_finish() doesn't remove the reference,
cairo_surface_destroy() does and will call surface_finish().

Thanks to Uli Schlachter for noticing that in:
https://bugs.freedesktop.org/show_bug.cgi?id=61876